# py-build-cmake-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: cross-wheels.yml  pyodide.yml  test.yml  wheels.yml
.github/workflows/python-build/: action.yml
.github/workflows/setup-conan/: action.yml
cmake/: Pybind11Stubgen.cmake  QueryPythonForPybind11.cmake
examples/: add_example.py
python-src/py_build_cmake_example/: __init__.py  add_module.py
scripts/ci/: build-linux-cross.sh  build-linux-native.sh  cibw.py-build-cmake.toml  pre-build-macos.py  pre-build-pyodide.py  pre-build-windows.py  pyodide.toolchain.cmake
scripts/ci/profiles/: aarch64-rpi3-linux-gnu.profile  armv6-rpi-linux-gnueabihf.profile  armv7-neon-linux-gnueabihf.profile  cross-linux.profile  linux.profile  x86_64-bionic-linux-gnu.profile
src/ext/: add_module.cpp
src/py_build_cmake_example/: __init__.py
test/: test_add_module.py  test_sub_package.py
