[project]
name = "py-build-cmake-example" # Name on PyPI
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["py-build-cmake", "addition", "subtraction", "pybind11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = []
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/tttapa/py-build-cmake-example"
Tracker = "https://github.com/tttapa/py-build-cmake-example/issues"

[project.optional-dependencies]
test = ["pytest>=7.2.0,<9"]

[project.scripts]
add = "py_build_cmake_example.add:main"

[build-system]
requires = ["py-build-cmake~=0.3.0a3", "pybind11-stubgen~=2.5.1"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "py_build_cmake_example" # Import name
directory = "python-src"

[tool.py-build-cmake.sdist]
include = ["conanfile.txt", "CMakeLists.txt", "cmake", "src"]
exclude = []

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
args = ["-Wdev"]
install_args = ["--verbose"]
install_components = ["python_modules", "python_stubs"]
build_type = "Release"
preset = "conan-default"
build_presets = "conan-release"
build_path = "build"

[tool.py-build-cmake.stubgen]
args = ["-v"]

[tool.cibuildwheel]
archs = ["auto64"]
skip = "pp37-*"
build-frontend = "build"
environment = { "PY_BUILD_CMAKE_VERBOSE" = "1" }
test-requires = "pytest"
test-command = "pytest {project}/test"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64", "universal2"]
before-build = [
    "pip install cmake 'conan>=2,<3' ninja",
    "conan profile detect -f",
    "rm -rf {package}/build",
    "python {package}/scripts/ci/pre-build-macos.py",
]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
before-build = [
    "python -m pip install cmake \"conan>=2,<3\" ninja",
    "conan profile detect -f",
    "(if exist {package}\\build (rmdir /s /q {package}\\build))",
    "python {package}\\scripts\\ci\\pre-build-windows.py",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
