# Standard project metadata. See the PyPA documentation for details:
# https://packaging.python.org/en/latest/specifications/pyproject-toml
[project]
name = "py-build-cmake-example" # Name on PyPI
readme = "README.md"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["py-build-cmake", "addition", "subtraction", "pybind11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = []
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/tttapa/py-build-cmake-example"
Tracker = "https://github.com/tttapa/py-build-cmake-example/issues"

[project.optional-dependencies]
test = ["pytest>=7.2.0,<9"]

[project.scripts]
add = "py_build_cmake_example.add:main"

# ---------------------------------------------------------------------------- #

# We use py-build-cmake as the build backend, and the build requires the
# pybind11-stubgen package to generate stub files for the extension module.
[build-system]
requires = ["py-build-cmake~=0.4.0a0", "pybind11-stubgen~=2.5.1"]
build-backend = "py_build_cmake.build"

# ---------------------------------------------------------------------------- #

# The module section points py-build-cmake to the Python sources of the package.
[tool.py-build-cmake.module]
name = "py_build_cmake_example" # Import name
directory = "python-src"

# The sdist section determines which files are included in source distributions.
[tool.py-build-cmake.sdist]
include = ["conanfile.py", "CMakeLists.txt", "cmake", "src"]

# Here we tell py-build-cmake how to build the CMake project. Since we're using
# Conan for the dependencies, we select the CMake presets accordingly.
[tool.py-build-cmake.cmake]
minimum_version = "3.25"
build_path = "build"
build_type = "Release"
preset = "conan-default"
build_presets = "conan-release"
install_components = ["python_modules", "python_stubs"]
# On Linux and macOS, we'll use the Ninja Multi-Configuration generator.
[tool.py-build-cmake.linux.cmake]
generator = "Ninja Multi-Config"
[tool.py-build-cmake.mac.cmake]
generator = "Ninja Multi-Config"

# This enables automatic stub file generation using Mypy stubgen.
[tool.py-build-cmake.stubgen]

# ---------------------------------------------------------------------------- #

# The following options configure the cibuildwheel tools to build Wheel packages
# in a continuous integration workflow.
# Specifically, we enable verbose output for py-build-cmake, and include some
# CI-specific py-build-cmake options that are not used when a user builds the
# package locally.
[tool.cibuildwheel]
archs = ["auto64"]
skip = "pp37-*"
build-frontend = "build"
environment = { "PY_BUILD_CMAKE_VERBOSE" = "1" }
config-settings = { "local" = "scripts/ci/cibw.py-build-cmake.toml" }
test-extras = ["test"] # refers to [project.optional-dependencies].test above
test-command = "pytest {project}/test"

# We use cibuildwheel's before-build hook to install all Conan dependencies.
# Because cibuildwheel supports multiple architectures, we'll need some
# additional logic to select the correct Conan profile for the selected
# platform. This is handled by the pre-build-*.py scripts.
[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64", "universal2"]
before-build = [
    "pip install cmake 'conan>=2,<3' ninja",
    "conan profile detect -f",
    "rm -rf {package}/build",
    "python {package}/scripts/ci/pre-build-macos.py",
]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
before-build = [
    "python -m pip install cmake \"conan>=2,<3\" ninja",
    "conan profile detect -f",
    "(if exist {package}\\build (rmdir /s /q {package}\\build))",
    "python {package}\\scripts\\ci\\pre-build-windows.py",
]

# ---------------------------------------------------------------------------- #

# You can add other tool-specific configuration options, e.g. for the pytest
# testing framework.
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
